@@ -1,6 +1,6 @@
 .. _2.0:
 
-GammaLib 2.0 release (25 May 2022)
+GammaLib 2.0 release (4 June 2022)
 ==================================
 
 Overview
@@ -46,6 +46,8 @@ Bug fixes
 Improvements
 ------------
 
+* [`4062 <https://cta-redmine.irap.omp.eu/issues/4062>`_] -
+  Add ``GEbounds::remove()`` method
 * [`4058 <https://cta-redmine.irap.omp.eu/issues/4058>`_] -
   Add ``ASTRI`` and ``FACT`` as supported instrument type for the CTA module
 * By default, do not allow log-likelihood decrease in LM optimiser
