@@ -1,7 +1,7 @@
 /***************************************************************************
  *                 GEbounds.i - Energy boundaries class                    *
  * ----------------------------------------------------------------------- *
- *  copyright (C) 2010-2020 by Juergen Knoedlseder                         *
+ *  copyright (C) 2010-2022 by Juergen Knoedlseder                         *
  * ----------------------------------------------------------------------- *
  *                                                                         *
  *  This program is free software: you can redistribute it and/or modify   *
@@ -67,6 +67,7 @@ public:
     void           merge(void);
     void           merge(const GEnergy& emin, const GEnergy& emax);
     void           remove(const int& index);
+    void           remove(const GEnergy& emin, const GEnergy& emax);
     void           reserve(const int& num);
     void           extend(const GEbounds& ebds);
     void           set(const GEnergies& energies);
